# Python-SW10

./: README.md  SW10.py  entry_point.cfg  setup.cfg  test_s.py  xSW10.py
.github/workflows/: python.yml
examples/: main.py
