[metadata]
name = OC05
#version = attr: xOC05.__version__
version = 0.1
description = XinaBox OC05 Servo Controller
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = OC05
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
entry_points = file: entry_points.cfg

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
test = flake8

[options.packages.find]
exclude =

[options.data_files]
